SDS :: Templates v.5.0.18  · Fixed z-index in Dropdown component template.  · Aligned templates base from Space Light and Space Dark templates.

--- a/src/style/global/components/_dropdown.scss
+++ b/src/style/global/components/_dropdown.scss
@@ -5,6 +5,7 @@
     --sds-dropdown-default-min-width: var(--sds-dropdown-min-width);
     --sds-dropdown-default-left: var(--sds-dropdown-left);
     --sds-dropdown-default-top: var(--sds-dropdown-top);
+    --sds-dropdown-default-z-index: var(--sds-dropdown-z-index);
 
     --sds-dropdown-default-border: var(--sds-dropdown-border);
     --sds-dropdown-default-border-color: var(--sds-dropdown-border-color);
