--- a/src/style/templates/space-light/backroom/_colors.scss
+++ b/src/style/templates/space-light/backroom/_colors.scss
@@ -2,8 +2,8 @@
 
 $colorsAvailable: (
   st-blue: $colorStBlue,
-  white: $colorWhite,
-  black: $colorBlack,
+  -white: $colorWhite,
+  -black: $colorBlack,
   action-1: $colorAction1,
   action-2: $colorAction2,
   action-3: $colorAction3,
